--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <!-- SOCIAL MEDIA META -->
 <meta property="og:description" content="Am | construction">
 <meta property="og:image" content="http://www.themezinho.net/homepark/preview.png">
-<meta property="og:site_name" content="homepark">
+<meta property="og:site_name" content="AM Construction">
 <meta property="og:title" content="Am | construction">
 <meta property="og:type" content="website">
 <meta property="og:url" content="http://www.themezinho.net/homepark">
 
 <!-- TWITTER META -->
 <meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="@homepark">
+<meta name="twitter:site" content="@">
 <meta name="twitter:creator" content="@homepark">
 <meta name="twitter:title" content="Am | construction">
 <meta name="twitter:description" content="Am | construction">
@@ -48,7 +48,7 @@
   <!-- end layer -->
   <div class="inner">
     <figure><img src="images/preloader.gif" alt="Image"></figure>
-    <p><span class="text-rotater" data-text="Homepark | Elements | Loading">Loading</span></p>
+    <p><span class="text-rotater" data-text="AM Construction | Elements | Loading">Loading</span></p>
   </div>
   <!-- end inner --> 
 </div>
@@ -73,7 +73,7 @@
   <!-- end menu -->
   <div class="side-content">
     <figure> <img src="images/logo-light.png" alt="Image"> </figure>
-    <p>By aiming to take the life quality to an upper level with the whole realized Projects, Homepark continues to be the address of luxury.</p>
+    <p>By aiming to take the life quality to an upper level with the whole realized Projects, AM continues to be the address of luxury.</p>
     <ul class="gallery">
       <li><a href="images/gallery-thumb01.jpg" data-fancybox><img src="images/gallery-thumb01.jpg" alt="Image"></a></li>
       <li><a href="images/gallery-thumb02.jpg" data-fancybox><img src="images/gallery-thumb02.jpg" alt="Image"></a></li>
